# app/Models/Event.php
@@ -47,6 +47,7 @@ class Event extends Model
         'end_time',
         'door_time',
         'is_private',
+        'is_after_hours',
         'is_ticketed',
         'is_sold_out',
         'is_free',
@@ -127,6 +128,7 @@ class Event extends Model
     public $checkboxes = [
         'published',
         'is_private',
+        'is_after_hours',
         'is_ticketed',
         'is_free',
         'is_member_exclusive',
@@ -436,6 +438,12 @@ class Event extends Model
                 "doc" => "Is Private",
                 "type" => "boolean",
                 "value" => function () {return $this->is_private;},
+            ],
+            [
+                "name" => "is_after_hours",
+                "doc" => "Is after hhours",
+                "type" => "boolean",
+                "value" => function () {return $this->is_after_hours;},
             ],
             [
                 "name" => "is_ticketed",
